@@ -1,5 +1,6 @@
 Changelog
 
++ added explanation field
 + supported drivers pdo
 # missing translations in the fileupload
 # check if exif_read_data exists
